<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TcpClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_HomeIp">Set Home IP</string>
    <string name="pref_HomeIp_summary">Set Home IP</string>
    <string name="pref_ArduinoIp">Set Arduino IP</string>
    <string name="pref_ArduinoIp_summary">Set Arduino IP</string>
    <string name="pref_HomePort">Set Home Port</string>
    <string name="pref_HomePort_summary">Set Home Port</string>
    <string name="pref_ArduinoPort">Set Arduino Port</string>
    <string name="pref_ArduinoPort_summary">Set Arduino Port</string>
    <string name="pref_home_profile">Set Home Settings</string>
    <string name="pref_arduino_profile">Set Arduino Settings</string>
 
    <string-array name="environment_array">
        <item>Arduino</item>
        <item>PC</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>