<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_home_profile" >
        <EditTextPreference
                android:title="@string/pref_HomeIp"
                android:summary="@string/pref_HomeIp_summary"
                android:key="prefHomeIp"/>
        <EditTextPreference
                android:title="@string/pref_HomePort"
                android:summary="@string/pref_HomePort_summary"
                android:key="prefHomePort"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_arduino_profile" >
        <EditTextPreference
                android:title="@string/pref_ArduinoIp"
                android:summary="@string/pref_ArduinoIp_summary"
                android:key="prefArduinoIp"/>
        <EditTextPreference
                android:title="@string/pref_ArduinoPort"
                android:summary="@string/pref_ArduinoPort_summary"
                android:key="prefArduinoPort"/>
    </PreferenceCategory>
 
</PreferenceScreen>